# scikit-jax

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: unit_test.yml
examples/: experimenting_clustering.ipynb  experimenting_decomposing.ipynb  experimenting_gaussiannb.ipynb  experimenting_multinomialnb.ipynb  loadingimage.ipynb
examples/data/: multiple_linear_regression_dataset.csv
examples/data/clustering_data/: basic1.csv  basic2.csv  basic3.csv  basic4.csv  basic5.csv  blob.csv  box.csv  boxes.csv  boxes2.csv  boxes3.csv  chrome.csv  dart.csv  dart2.csv  face.csv  hyperplane.csv  isolation.csv  lines.csv  lines2.csv  network.csv  outliers.csv  ring.csv  sparse.csv  spiral.csv  spiral2.csv  spirals.csv  supernova.csv  triangle.csv  un.csv  un2.csv  wave.csv
examples/notebooks/: 2_gaussian_nb.ipynb  2_k_means.ipynb  experimenting_clustering.ipynb  experimenting_gaussiannb.ipynb  experimenting_multinomialnb.ipynb  linear_model.ipynb  loadingimage.ipynb
scikit_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skjax/: clustering.py  decomposition.py  linear_model.py  naive_bayes.py
skjax/_utils/: __init__.py  _helper_functions.py  config.py
skjax/_utils/helpers/: _clustering.py  _data.py  _helper_functions.py  _linear_model.py  _naive_bayes.py
tests/: run_tests.py  test_PCA.py  test_clustering.py  test_decomposition.py  test_gaussian_naive_bayes.py  test_k_means.py  test_linear_model.py  test_linear_regression.py  test_linear_regression_bgd.py  test_linear_regression_sgd.py  test_multinomial_naive_bayes.py
tests/test_clustering/: test_k_means.py
tests/test_naive_bayes/: test_gaussian_naive_bayes.py  test_multinomial_naive_bayes.py
tests/test_utils/: test_helper_functions.py
