[tool.poetry]
name = "scikit-jax"
version = "0.1.0"
description = ""
authors = ["LiibanMo <liibanmo12@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "skjax"}
]

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.31"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.2"
mkdocs-material = "^9.5.31"
mkdocs-awesome-pages-plugin = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"