[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0", "wheel"]

[project]
name = "scikit-jax"
version = "0.0.3dev1"
description = "Classical Machine Leadarning Algorithms on the GPU/TPU."
readme = "README.md"
authors = [
    { name = "Liiban Mohamud", email = "liibanmohamud12@gmail.com" }
]
license = { text = "MIT" }
keywords = ["jax", "classical", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.9"

dependencies = [
    "jax",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = ["pytest>=6.0"]
test = ["pytest>=6.0"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
homepage = "https://github.com/LiibanMo/scikit-jax"